	  attaching devices only read attributes from source 0 (=
	  MD_SOURCE_FLATBED), others give wrong results. Better handling of
	  different shading depths. Including model ColorPage-EP. Workaround
	  for firmware bug for V300 (FW < 2.70). Workaround for firmware bug
	  with odd pixel numbers. Bugfix for lamp switching when using
	  LightLid35 Transparency Adaptor.

2004-10-04  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/sane-find-scanner.man tools/check-usb-chip.c
	  tools/sane-find-scanner.c: sane-find-scanner can now load USB
	  descriptors from /proc/bus/usb/devices dumps (e.g. from the
	  unsupported scanner web pages). Minor modifications to some of
	  the chipset tests.
	
2004-10-04  Peter Kirchgessner <peter@kirchgessner.net>

	* backend/hp.h backend/hp.c backend/hp-scl.c:
	  Fixed bug #300973 (renamed global function hp_init_openfd
	  to sanei_hp_init_openfd

2004-10-04  Gerhard Jaeger <gerhard@gjaeger.de>

	* backend/plustek.c: Fixed bug #300963.
	* doc/plustek/Plustek-USB.changes: Update.
	* po/*.po: Update.

2004-10-03  Thomas Soumarmon <thomas.soumarmon@cogitae.net>

	* backend/hp5400_debug.c backend/hp5400_debug.h 
	  backend/hp5400_internal.c backend/hp5400_sane.c: 
	  removing more hp5400 compilation warnings

2004-10-03  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Nikon LS-5000 ED (bug
	  #300972). 
	* include/sane/saneopts.h: Added option for turning off the
	  scanner's lamp on exit (bug #300963).
	* backend/gt68xx.c backend/gt68xx_high.h: Used new lamp option
	  from saneopts.h (bug #300963).
	* backend/net.c doc/descriptions/net.desc: Check for (size_t) -1
	  doesn't work on 64 bit platforms as size_t is 64 bits there
	  while the length of a data block is defined as 32 bits in the
	  SANE network standard (bug #300837).
	* backend/microtek2.c backend/microtek2.h: Fixed some warnings
	  (bug #300823). Fixed Microtek Phantom C6 scanning on big endian